[gd_scene load_steps=2 format=2]

[ext_resource path="res://sources/menu/TitleScreen.gd" type="Script" id=1]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
game_path = "res://sources/game/Game.tscn"

[node name="Title" type="Label" parent="."]
margin_left = 22.345
margin_top = 19.7779
margin_right = 108.345
margin_bottom = 33.7779
text = "gd-wildjam18"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 36.8406
margin_top = 63.4106
margin_right = 164.841
margin_bottom = 122.411
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
text = "Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 128.0
margin_bottom = 50.0
text = "Quit"
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
